--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
   },
   "homepage": "https://github.com/jrayga/JasonRayga#readme",
   "dependencies": {
-    "grunt": "^1.0.2",
-    "grunt-cli": "^1.2.0",
+    "grunt": "^1.1.0",
+    "grunt-cache-breaker": "^2.0.1",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-ng-annotate": "^3.0.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
+    "grunt-ng-annotate": "^4.0.0",
+    "grunt-usemin": "^3.1.1"
   }
 }
