--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "hola",
-        "Kamusta",
-        "नमस्ते"
-    ]
+  "cSpell.words": ["hola", "Kamusta", "नमस्ते"]
 }
