--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Online Resume CV",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "audit": "ncu && better-npm-audit audit"
   },
   "repository": {
     "type": "git",
@@ -20,14 +21,14 @@
   },
   "homepage": "https://github.com/jrayga/JasonRayga#readme",
   "dependencies": {
-    "grunt": "^1.1.0",
+    "grunt": "^1.6.1",
     "grunt-cache-breaker": "^2.0.1",
-    "grunt-cli": "^1.3.2",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-concat": "^2.1.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^3.0.0",
-    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-cssmin": "^5.0.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "grunt-ng-annotate": "^4.0.0",
     "grunt-usemin": "^3.1.1"
